@startuml
'https://plantuml.com/class-diagram

abstract class "Persona" {
    nombre: String
    apellidoPaterno: String
    apellidoMaterno: String | null
    curp: String[18]
    rfc: String[13]
    numeroSeguroSocial: String[11]
    fechaNacimiento: Date
    edad: Integer
    genero: MASCULINO | FEMENINO | \n \t  NO BINARIO | OTRO
    telefonoPersonal: String[10]
    correoElectronicoPersonal: String
    estadoCivil: SOLTER@ | CASAD@ | DIVORCIAD@ |
                 \t  VIUD@ | SEPARADO@ | UNION LIBRE
    hijos: Boolean
    contactoEmergenciaNombre: String
    contactoEmergenciaTelefono: String[10]

    calcularEdadPersona()
}

class "Empleado"{
    activo: Boolean
    fechaIngreso: Date
    fechaBaja: Date | null
    correoElectronico: String
    telefono: String[10]
    extensionTelefono: String | null
    diasVacacionesDisponibles: Integer
    diasVacacionesTomados: Integer
    motivoBaja: TERMINO CONTRATO | LIQUIDACION |
                \t RENUNCIA | NULL
    roles: List<ADMIN |
                \t RH1 | RH2 | RH3 |
                \t ADMON1 | ADMON 2 | ADMON3 |
                \t INFO1 | INFO2 | INFO3 |
                \t IP1 | IP2 | IP3 |
                \t VTC1 | VTC2 | VTC3 >

    calcularEdad()
}

class "Domicilio" {
    calle: String
    codigoPostal: String[5]
    colonia: String
    municipio: String
    ciudad: String
    estado: String
}

class "Escolaridad" {
    nivel: BACHILLERATO | TECNICO |
            \tLICENCIATURA | MAESTRIA |
            \tDOCTORADO | ESPECIALIDAD
    carrera: String
    estadoNivel: PASANTE | TRUNCA |
                \tCREDITOS CUBIERTOS |
                \tCERTIFICADO | TRAMITE TITULACION |
                \tTITULADO
    conCedulaProfesional: Boolean
    cedulaProfesional: String[7 | 8] | null
}

class "TipoPlaza" {
    nombre: SP | EE | INCA
}

class "Puesto"{
    nombre: String
    salarioBruto: Float
}

class "Región" {
    nombre: String
}

class "Dirección" {
    nombre: String
}

class "Subdirección" {
    nombre: String
}

class "Estado" {
    nombre: String
}


"Persona" <|-- "Empleado" : < es una
"Domicilio" "1" -* "1" "Persona" : tiene <
"Persona" "1" *- "1..*" "Escolaridad" : tiene >

"Empleado" "0..*" -- "1" "TipoPlaza" : tiene >
"Empleado" "0..*" - "1" "Puesto" : ocupa >

"TipoPlaza" "1" o- "0..*" "Puesto" : tiene >

"Empleado" "0..*" - "1" "Región" : adscrito >
"Empleado" "0..*" - "1" "Dirección" : pertenece a >
"Empleado" "0..*" - "1" "Subdirección" : trabaja para >

"Región" - "Estado"
"Dirección" - "Estado"
"Estado" -- "Subdirección"

"Región" -- "Dirección"
"Dirección" -- "Subdirección"




















@enduml